--- a/productlist.html
+++ b/productlist.html
@@ -108,7 +108,7 @@
             <li><a href="homepage.html">Home</a></li>
             <li><a href="#">Products</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
         </ul>
     </div>
     <div id="navbar_icons">
